changed nav, added more cards to project page

--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,26 @@
                     </section>
                 </a>
 
+                <a class="project-card-link" href="projects/roots.html">
+                    <section class="web-undivided-mind-section project-section-flex">
+                        <img src="assets/images/web-screenshots/roots-web.jpg" alt="screenshot of roots website mockup" class="project-img">
+                        <div class="card-text-container">
+                            <h1 class="project-card-title">Roots Luxury Interiors</h1>
+                            <p class="project-card-description-dev">Branding, Graphic, and Web Design</p>
+                        </div>
+                    </section>
+                </a>
+
+                <a class="project-card-link" href="projects/prime-video.html">
+                    <section class="web-undivided-mind-section project-section-flex">
+                        <img src="assets/images/web-screenshots/prime-desktop.png" alt="mockup of prime desktop view" class="project-img">
+                        <div class="card-text-container">
+                            <h1 class="project-card-title">Prime Video Resign</h1>
+                            <p class="project-card-description-dev">UX/UI Design</p>
+                        </div>
+                    </section>
+                </a>
+
                 <a class="project-card-link" href="projects/my-plants.html">
                     <section class="web-undivided-mind-section project-section-flex">
                         <img src="assets/images/web-screenshots/plant-site-screenshot.JPG" alt="screenshot of plant website" class="project-img">
