updated card images, started node project page

--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
                     <section class="web-undivided-mind-section project-section-flex">
                         <img src="assets/images/web-screenshots/prime-desktop.png" alt="mockup of prime desktop view" class="project-img">
                         <div class="card-text-container">
-                            <h1 class="project-card-title">Prime Video Resign</h1>
+                            <h1 class="project-card-title">Prime Video Redesign</h1>
                             <p class="project-card-description-dev">UX/UI Design</p>
                         </div>
                     </section>
