added header to individual project page

--- a/projects/node-app.html
+++ b/projects/node-app.html
@@ -28,7 +28,18 @@
         
             </header>
 
-            <main>
+            <main class="project-ind-main">
+
+                <section class="project-header">
+                    <img src="../assets/images/web-screenshots/undivided-mind-screenshot.JPG" alt="undivided mind screenshot" class="project-header-image">
+
+                    <div class="project-header-info">
+                        <h1 class="project-ind-title">Node.js Login/Register App</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae aliquid aliquam qui, ex illum temporibus officia unde, eius eum, in repellendus enim quia reprehenderit iusto dolores! Cumque doloribus asperiores cum!</p>
+                    </div>
+
+                </section>
+
             </main>
         
             <footer>
