--- a/projects/node-app.html
+++ b/projects/node-app.html
@@ -15,10 +15,10 @@
                 <nav class="global-nav" id="global-nav">
                     <ul class="global-nav-ul">
                         <img src="assets/images/close.svg" alt="close-menu" id="close-menu">
-                        <li class="project-nav-link "><a id="nav-active" href="projects.html">Projects</a></li>
-                        <li class="art-photos-nav-link"><a href="art-photos.html">Art &amp; Photos</a></li>
-                        <li class="about-nav-link"><a href="about.html">About</a></li>
-                        <li class="contact-nav-link"><a href="contact.html">Contact</a></li>
+                        <li class="project-nav-link "><a id="nav-active" href="../projects.html">Projects</a></li>
+                        <li class="art-photos-nav-link"><a href="../art-photos.html">Art &amp; Photos</a></li>
+                        <li class="about-nav-link"><a href="../about.html">About</a></li>
+                        <li class="contact-nav-link"><a href="../contact.html">Contact</a></li>
                         
                     </ul>
                 </nav>
