updated pokemon links

--- a/projects/pokemon-api.html
+++ b/projects/pokemon-api.html
@@ -41,9 +41,9 @@
 
                         <p>This app was created in order to practice fetching data from an API using JavaScript. Like many members of my SAIT class I chose the pokemon API, as it is a very straightforward API to get started with. A user can click on a card to reveal more information about that particular pokemon. I hope to add more functionality to this app in the future, but building it was an excellent introduction to using APIs.</p>
 
-                        <p><a href="https://github.com/jchack1/react-scrabble-tiles" target="_blank">See the code on Github</a></p>
+                        <p><a href="https://github.com/jchack1/javascript-assignment-3" target="_blank">See the code on Github</a></p>
 
-                        <p><a href="https://react-scrabble.herokuapp.com/" target="_blank">View the app</a></p>
+                        <p><a href="https://zen-aryabhata-199c38.netlify.app/" target="_blank">View the app</a></p>
 
                     </div>
                     
