updated about and photo page

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             <ul class="global-nav-ul">
                 <img src="assets/images/close.svg" alt="close-menu" id="close-menu">
                 <li class="project-nav-link "><a href="projects.html">Projects</a></li>
-                <li class="art-photos-nav-link"><a  href="art-photos.html">Art &amp; Photos</a></li>
+                <li class="art-photos-nav-link"><a  href="art-photos.html">Photos &amp; Art</a></li>
                 <li class="about-nav-link"><a id="nav-active" href="about.html">About</a></li>
                 <li class="contact-nav-link"><a href="contact.html">Contact</a></li>
             </ul>
@@ -46,37 +46,42 @@
                 <h2>My Skills</h2>
                 <h3>Front-end<h3>
                     <ul>
-                        <li>Strong skills in HTML and CSS</li>
+                        <li>Strong in HTML and CSS</li>
                         <li>JavaScript</li>
-                        <li>Dabbled in Sass, jQuery, and Bootstrap</li>
-                        <li>Currently learning React</li>
+                        <li>Worked with Sass, jQuery, and Bootstrap</li>
+                        <li>React</li>
                     </ul>
 
                 <h3>Back-end</h3>
                     <ul>
-                        <li>Have built projects with Node.js, Express, and MongoDB</li>
+                        <li>Node.js/Express</li>
+                        <li>AWS and Serverless</li>
+                        <li>C#/.NET</li>
+                        <li>Used NoSQL and SQL databases including:  MongoDB Atlas, DynamoDB, SQL Server, MySQL</li>
                         <li>Familiar with Python and PHP</li>
                     </ul>
 
                 <h3>Content Management Systems</h3>
                     <ul>
                         <li>Jekyll</li>
-                        <li>WordPress</li>
+                        <li>WordPress, including Oxygen site builder</li>
                     </ul>
 
-                <h3>Design</h3>
+                <h3>Design skills</h3>
                     <ul>
-                        <li>Adobe Illustrator</li>
-                        <li>Adobe Photoshop, GIMP</li>
+                        <li>Adobe Creative Cloud software including: Illustrator, Photoshop, Lightroom, XD, Premiere Pro</li>
+                        <li>Figma</li>
+                        <li>UX research / UI design</li>
                         <li>Responsive design</li>
                         <li>Graphic design</li>
                     </ul>
 
-                <h3>Other developer skills</h3>
+                <h3>Developer skills</h3>
                     <ul>
                         <li>Git – for solo and team projects</li>
                         <li>Command line</li>
                         <li>Linux systems, including Raspberry Pi</li>
+                        <li>Fetching data from REST APIs</li>
                         <li>Research skills</li>
                         <li>Problem solving</li>
                     </ul>
