--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul class="global-nav-ul">
                 <img src="assets/images/close.svg" alt="close-menu" id="close-menu">
                 <li class="project-nav-link "><a href="projects.html">Projects</a></li>
-                <li class="art-photos-nav-link"><a href="art-photos.html">Art &amp; Photos</a></li>
+                <li class="art-photos-nav-link"><a href="art-photos.html">Photos &amp; Art</a></li>
                 <li class="about-nav-link"><a href="about.html">About</a></li>
                 <li class="contact-nav-link"><a href="contact.html">Contact</a></li>
                 
