update plants page

--- a/projects/my-plants.html
+++ b/projects/my-plants.html
@@ -135,7 +135,7 @@
             <img src="../assets/images/plants/plants-mobile-menu-open.JPG"  alt="plants mobile" class="project-body-img-plants-story">
           </div>
           
-          <p>The mobile view removes the tab style navigation bar from the tablet view and replaces it with a hamburger menu in the top right corner. When the icon is clicked/tapped the menu slides onto the screen. It is a transparent gray, like the inactive tabs on the tablet navigation bar; this was simply more visually appealing to me, as the menu didn't appear to be one solid, boring rectangle.</p>
+          <p>The mobile view removes the tab style navigation bar from the tablet view and replaces it with a hamburger menu in the top right corner. When the icon is clicked/tapped the menu slides onto the screen. It is a transparent gray, like the inactive tabs on the tablet navigation bar; this was simply more visually appealing to me, as the menu didn't appear to be one solid, boring rectangle. Instead the menu feels delicate and elegant.</p>
         </div>
         <hr class="hr-style"></hr>
 
