updated about section and intro

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <section id="home-intro">
             <h1 id="home-title">Hi, I'm Julia</h1>
 
-            <p id="home-p1">I'm a junior web developer.</p>
-            <p id="home-p2">My specialty is front end development and I love bringing designs to life with code.</p>
+            <p id="home-p1">I'm a web developer and designer.</p>
+            <p id="home-p2">I love designing beautiful, user-friendly interfaces and bringing them to life with organized, efficient code.</p>
         
             <p id="home-button"><a href="projects.html">My projects</a></p>
         </section>
