prime video project page

--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
             class="project-img"
           />
           <div class="card-text-container">
-            <h1 class="project-card-title">Prime Video Redesign</h1>
+            <h1 class="project-card-title">Prime Video Re-design</h1>
             <p class="project-card-description-dev">UX/UI Design</p>
           </div>
         </section>
