--- a/projects/roots.html
+++ b/projects/roots.html
@@ -129,6 +129,8 @@
                         <p>I used only Adobe Illustrator to produce the pieces.  This helped me to improve my skills in creating logos and mock-ups.  An issue I faced, however, was that it was often time-consuming to copy repeating elements in Illustrator.  Going forward I would consider using Adobe XD or Figma for UI design, as they allow you to create reusable components, quickly create grids, and enable you to create prototypes.  </p>
                         <p>Overall I believe I was able to translate the client’s personality and requirements into brand that truly suits their values of luxury, minimalism, and quality.</p>
 
+                        <p>Original design brief came from <a href="https://www.briefbox.me/">Briefbox</a></p>
+
                 </section>
 
             </main>
