--- a/projects/prime-video.html
+++ b/projects/prime-video.html
@@ -94,14 +94,14 @@
         <p>In order to understand how streaming UIs are generally designed I looked at each streaming service to which I am subscribed. At the time this project was created, many of these applications include a large header image, lots of menu options, a search field, and card-like images for their movies and shows. Below is a screen shot from the current Prime Video UI.</p>
         <img src="../assets/images/prime/prime-original.JPG" alt="original layout" class="prime-img">
 
-        <p>An issue I noticed when looking through these UIs is that while still navigable, there were still a lot of options and buttons on the screen for the user to click on. Sometimes I was confused about where find basic functionality like to search, find my recently watched content, log out, and so on. With my designs I simplified the UI by removing some of the clutter and leaving only the most essential functions in place. When planning my designs I asked myself – could my grandma use this app? I tried to get my designs to a place that was as close as possible to a “yes” while still fulfilling the project requirements.</p>
+        <p>An issue I noticed when looking through these UIs is that while still navigable, there were a lot of options and buttons on the screen for the user to click on. Sometimes I was confused about where find basic functionality like to search, find my recently watched content, log out, and so on. With my designs I simplified the UI by removing some of the clutter and leaving only the most essential functions in place. When planning my designs I asked myself – could my grandma use this app? I tried to get my designs to a place that was as close as possible to “yes” while still fulfilling the project requirements.</p>
         <img src="../assets/images/prime/prime-sketch.jpg" alt="sketches" class="prime-img  prime-sketch">
 
         <hr class="hr-style"></hr>
 
         <h2>Styles</h2>
         <img src="../assets/images/prime/prime-style.svg" alt="style tile" class="prime-img">
-        <p>The colour palette I chose was inspired by the already existing colours in Prime Video. This helps the users to still feel like they are using the original Prime service they have grown to love.  Orange is used as an accent colour, notably on the “New” button, drawing attention to new content.  I implemented a new color system for ratings, so users can see in an instant the average rating for a movie or show.  Corbel was chosen as the sans-serif font and is used all throughout the application. </p>
+        <p>The colour palette I chose was inspired by the already existing colours in Prime Video. This helps the users to feel like they are still using the original Prime service they have grown to love.  Orange is used as an accent colour, notably on the “New” button, drawing attention to new content.  I implemented a new color system for ratings, so users can see in an instant the average rating for a movie or show.  Corbel was chosen as the sans-serif font and is used all throughout the application. </p>
 
         <hr class="hr-style"></hr>
 
@@ -111,7 +111,7 @@
 
         <img src="../assets/images/prime/prime-menu.jpg" alt="main screen with menu" class="prime-img">
         <p>The menu includes the main Prime categories, account settings, and a logout button.  
-            All possible account settings are found under “Settings” and the logout button isn’t buried inside menus like it often is in other applications. Basic tasks a user would like to accomplish, like finding a title, making changes in their account, and playing a movie, are easily accessible from the main screen. There is no extra clutter to confuse users are less experienced with technology. 
+            All possible account settings are found under “Settings” and the logout button isn’t buried inside menus like it often is in other applications. Basic tasks a user would like to accomplish, like finding a title, making changes in their account, and playing a movie, are easily accessible from the main screen. There is no extra clutter to confuse users that are less experienced with technology. 
             Below the header users can browse through their recently watched content and other categories. Titles are displayed as movie posters in a gallery format.  When a user clicks on an image, a new modal opens. 
             </p>
 
