update prime, final touches

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                 <h2>My Skills</h2>
                 <h3>Front-end<h3>
                     <ul>
-                        <li>Strong in HTML and CSS</li>
+                        <li>HTML, CSS</li>
                         <li>JavaScript</li>
                         <li>Worked with Sass, jQuery, and Bootstrap</li>
                         <li>React</li>
