--- a/projects/my-plants.html
+++ b/projects/my-plants.html
@@ -64,14 +64,6 @@
             plants are visually appealing and add a pop of colour to the site.
           </p>
 
-          <!-- <p>
-            A user can click on the images, toggling text to appear over the
-            image. I created different designs and functionality for desktop,
-            tablet and mobile screen sizes, so please view the site at all sizes
-            to get the full picture of what I can do with basic HTML, CSS, and
-            JavaScript.
-          </p> -->
-
           <p>
             <a
               href="https://github.com/jchack1/my-plant-website"
@@ -112,7 +104,7 @@
 
         <h2>Layouts for different screen sizes</h2>
         <p>As mentioned above a goal of this project was to practice designing for different screen sizes. The user gets a slightly different experience at mobile, tablet, and desktop sizes, but the functionality of the site remains the same. I could have had the design look very similar at each size, and allow for the site to adjust according to size, but I wanted to get more creative. This site was designed with a desktop-first approach. </p>
-        <p>If you are viewing this project on a desktop browser, please adjust your window size to view each design.</p>
+        <p>If you are viewing the project site on a desktop browser, please adjust your window size to view each design.</p>
 
         <h3>Desktop</h3>
         <div class="plants-content">
