reduced file sizes

--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
       <a class="project-card-link" href="projects/prime-video.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
-            src="assets/images/web-screenshots/prime-desktop.png"
+            src="assets/images/web-screenshots/prime-desktop.jpg"
             alt="mockup of prime desktop view"
             class="project-img"
           />
