--- a/projects/my-plants.html
+++ b/projects/my-plants.html
@@ -108,7 +108,7 @@
 
         <h3>Desktop</h3>
         <div class="plants-content">
-          <img src="../assets/images/plants/plants-desktop.svg"  alt="plants desktop" class="project-body-img-plants">
+          <img src="../assets/images/plants/plants-desktop.jpg"  alt="plants desktop" class="project-body-img-plants">
           <div class="plants-content-p">
             <p>For the desktop view I used CSS Grid to implement a photo gallery. Rather than a more typical grid with square photos I wanted to show the photos in their original resolution and composition. The variety of shapes and how they interact with the negative space, especially if you change the window size while viewing, gives this design an eccentric visual experience.</p>
             <p>I made the menu as minimal as possible. As there is a lot of space to work with on desktop size no backgrounds were included. The menu is differentiated from the rest of the page content only by being italicized and are given a green link hover. The menu is still easy to locate and there is no unnecessary clutter to distract the viewer. </p>
