--- a/projects/roots.html
+++ b/projects/roots.html
@@ -11,7 +11,7 @@
 </head>
 <body>
         <header class="page-header">
-                <a href="index.html"><img src="../assets/images/ai-interfacelogo-desktop-white.svg" class="page-julia-logo" alt="julia's logo"></a>
+                <a href="../index.html"><img src="../assets/images/ai-interfacelogo-desktop-white.svg" class="page-julia-logo" alt="julia's logo"></a>
         
                 <nav class="global-nav" id="global-nav">
                     <ul class="global-nav-ul">
