--- a/projects/react-node-science.html
+++ b/projects/react-node-science.html
@@ -65,7 +65,7 @@
 
                     <h2>Purpose of the project</h2>
 
-                    <p>Before I worked in this industry I went to univeristy and earned a Bachelor of Science degree in Biological Sciences. </p>
+                    <p>Before I worked in this industry I went to university and earned a Bachelor of Science degree in Biological Sciences. </p>
 
                     <p>I chose this degree because I was curious about the inner workings of things, especially in the field of molecular biology and biochemistry. I worked in science for only a short time but my curiosity for this field remained.</p>
 
@@ -93,11 +93,7 @@
 
                     <h2>Notes on development</h2>
 
-                    <p>I had originally intended to complete this project only with React, but I included Node.js for two reasons.</p>
-
-                    <p>1.  In order to deploy the app to Heroku I needed a server.js file.  This meant I would be setting up a Node.js/Express back-end no matter what.</p>
-
-                    <p>2.  GNews.io gives the user an API key which is meant to be kept secret.  If I had included it in the front-end, even in a .env file, it would be visible in the Network tab in browser developer tools.  If my API key is kept in the back-end, and out of my github code, it is not visible to anyone.</p>
+                    <p>I had originally intended to complete this project only with React, but I included Node.js because of my API key. GNews.io gives the user an API key which is meant to be kept secret.  If I had included it in the front-end, even in a .env file, it would be visible in the Network tab in browser developer tools.  If my API key is kept in the back-end, and out of my github code, it is not visible to anyone.</p>
 
                     <p>This made the project more challenging because I needed to connect the front-end and back-end. I created a "get" route in the back-end which fetched the data from the API, and in the front-end Axios made a request to this route.</p>
 
