new project - mern flashcards

--- a/projects.html
+++ b/projects.html
@@ -39,15 +39,15 @@
     </header>
 
     <main class="web-main-flexbox">
-      <a class="project-card-link" href="projects/react-node-science.html">
+      <a class="project-card-link" href="projects/mern-flashcards.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
-            src="assets/images/web-screenshots/science-news.jpg"
+            src="assets/images/web-screenshots/flashcards-screenshot.jpg"
             alt="screenshot of science news project"
             class="project-img"
           />
           <div class="card-text-container">
-            <h1 class="project-card-title">React & Node.js Science News App</h1>
+            <h1 class="project-card-title">MERN Stack Flashcard App</h1>
             <p class="project-card-description-dev">Web Development</p>
           </div>
         </section>
@@ -65,6 +65,20 @@
             <p class="project-card-description-dev">
               Branding, Graphic, and Web Design
             </p>
+          </div>
+        </section>
+      </a>
+
+      <a class="project-card-link" href="projects/react-node-science.html">
+        <section class="web-undivided-mind-section project-section-flex">
+          <img
+            src="assets/images/web-screenshots/science-news.jpg"
+            alt="screenshot of science news project"
+            class="project-img"
+          />
+          <div class="card-text-container">
+            <h1 class="project-card-title">React & Node.js Science News App</h1>
+            <p class="project-card-description-dev">Web Development</p>
           </div>
         </section>
       </a>
