roar bikes design added
also updated about page

--- a/about.html
+++ b/about.html
@@ -52,8 +52,8 @@
                     <ul>
                         <li>HTML, CSS</li>
                         <li>JavaScript</li>
-                        <li>Worked with Sass, jQuery, and Bootstrap</li>
-                        <li>React</li>
+                        <li>Sass, jQuery, and Bootstrap</li>
+                        <li>React, Next.js</li>
                     </ul>
 
                 <h3>Back-end</h3>
@@ -61,7 +61,7 @@
                         <li>Node.js/Express</li>
                         <li>AWS and Serverless</li>
                         <li>C#/.NET</li>
-                        <li>Used NoSQL and SQL databases including:  MongoDB Atlas, DynamoDB, SQL Server, MySQL</li>
+                        <li>NoSQL and SQL databases including:  MongoDB Atlas, DynamoDB, SQL Server, MySQL</li>
                         <li>Familiar with Python and PHP</li>
                     </ul>
 
