--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,20 @@
     </header>
 
     <main class="web-main-flexbox">
+      <a class="project-card-link" href="projects/roar-bikes.html">
+        <section class="web-undivided-mind-section project-section-flex">
+          <img
+            src="assets/images/roar-bikes/header-crop.jpg"
+            alt="screenshot of roar bikes mock-up"
+            class="project-img"
+          />
+          <div class="card-text-container">
+            <h1 class="project-card-title">Roar Bikes</h1>
+            <p class="project-card-description-dev">Web Design</p>
+          </div>
+        </section>
+      </a>
+
       <a class="project-card-link" href="projects/mern-flashcards.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
