--- a/about.html
+++ b/about.html
@@ -50,9 +50,10 @@
                 <h2>My Skills</h2>
                 <h3>Front-end<h3>
                     <ul>
-                        <li>HTML, CSS</li>
-                        <li>JavaScript</li>
-                        <li>Sass, jQuery, and Bootstrap</li>
+                        <li>HTML, CSS, Sass</li>
+                        <li>JavaScript, TypeScript</li>
+                        <li>jQuery</li>
+                        <li>Styling libraries/frameworks including: Bootstrap, TailwindCSS, Styled-Components</li>
                         <li>React, Next.js</li>
                     </ul>
 
