new project added

--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,20 @@
     </header>
 
     <main class="web-main-flexbox">
+      <a class="project-card-link" href="projects/pokemon-api.html">
+        <section class="web-undivided-mind-section project-section-flex">
+          <img
+            src="assets/images/web-screenshots/pokedex-v2-screenshot.jpg"
+            alt="screenshot of pokedex version 2"
+            class="project-img"
+          />
+          <div class="card-text-container">
+            <h1 class="project-card-title">Pokedex - Version 2</h1>
+            <p class="project-card-description-dev">Web Development</p>
+          </div>
+        </section>
+      </a>
+
       <a class="project-card-link" href="projects/roar-bikes.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
@@ -97,20 +111,6 @@
         </section>
       </a>
 
-      <a class="project-card-link" href="projects/node-app.html">
-        <section class="web-undivided-mind-section project-section-flex">
-          <img
-            src="assets/images/web-screenshots/undivided-mind-screenshot.JPG"
-            alt="screenshot of undivided mind node.js project"
-            class="project-img"
-          />
-          <div class="card-text-container">
-            <h1 class="project-card-title">Node.js Login/Register App</h1>
-            <p class="project-card-description-dev">Web Development</p>
-          </div>
-        </section>
-      </a>
-
       <a class="project-card-link" href="projects/prime-video.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
@@ -121,6 +121,20 @@
           <div class="card-text-container">
             <h1 class="project-card-title">Prime Video Re-design</h1>
             <p class="project-card-description-dev">UX/UI Design</p>
+          </div>
+        </section>
+      </a>
+
+      <a class="project-card-link" href="projects/node-app.html">
+        <section class="web-undivided-mind-section project-section-flex">
+          <img
+            src="assets/images/web-screenshots/undivided-mind-screenshot.JPG"
+            alt="screenshot of undivided mind node.js project"
+            class="project-img"
+          />
+          <div class="card-text-container">
+            <h1 class="project-card-title">Node.js Login/Register App</h1>
+            <p class="project-card-description-dev">Web Development</p>
           </div>
         </section>
       </a>
@@ -141,20 +155,6 @@
         </section>
       </a>
 
-      <a class="project-card-link" href="projects/react-scrabble.html">
-        <section class="web-undivided-mind-section project-section-flex">
-          <img
-            src="assets/images/web-screenshots/react-scrabble-screenshot.JPG"
-            alt="screenshot of react scrabble app"
-            class="project-img"
-          />
-          <div class="card-text-container">
-            <h1 class="project-card-title">React Scrabble App</h1>
-            <p class="project-card-description-dev">Web Development</p>
-          </div>
-        </section>
-      </a>
-
       <a class="project-card-link" href="projects/art-portfolio.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
@@ -171,15 +171,15 @@
         </section>
       </a>
 
-      <a class="project-card-link" href="projects/pokemon-api.html">
+      <a class="project-card-link" href="projects/react-scrabble.html">
         <section class="web-undivided-mind-section project-section-flex">
           <img
-            src="assets/images/web-screenshots/pokemon-api-screenshot.JPG"
-            alt="pokemon api assignment screenshot"
+            src="assets/images/web-screenshots/react-scrabble-screenshot.JPG"
+            alt="screenshot of react scrabble app"
             class="project-img"
           />
           <div class="card-text-container">
-            <h1 class="project-card-title">Pokemon API App</h1>
+            <h1 class="project-card-title">React Scrabble App</h1>
             <p class="project-card-description-dev">Web Development</p>
           </div>
         </section>
