--- a/projects/pokemon-api.html
+++ b/projects/pokemon-api.html
@@ -92,12 +92,13 @@
 
         <img src="../assets/images/pokedex/pokedex-v1.PNG" alt="pokedex version 1 screenshot" class="big-images">
 
-        <p>If you’d like, you can see <a href="https://zen-aryabhata-199c38.netlify.app/">Version 1 of the app here</a>, and <a href="https://github.com/jchack1/javascript-assignment-3">view the code on Github here.</a></p>
+        <p>If you’d like, you can see <a target="_blank" href="https://zen-aryabhata-199c38.netlify.app/">Version 1 of the app here</a>, and <a target="_blank" href="https://github.com/jchack1/javascript-assignment-3">view the code on Github here.</a></p>
 
         <hr class="hr-style"></hr>
 
         <h2>Version 2</h2>
         
+        <br>
         <br>
         <br>
 
